2008-09-07  Stef Walter  <stef@memberwebs.com>

	* libseahorse/libseahorse-c.vapi:
	* src/saehorse-preferences.h:
	* src/seahorse-viewer.c:
	* src/seahorse-viewer.h:
	* src/seahorse-viewer.vala: (removed)
	* src/Makefile.am: Write SeahorseViewer in C.
	
	* gkr/seahorse-gkr-commands.vala:
	* libseahorse/seahorse-commands.vala:
	* pgp/seahorse-pgp-commands.vala:
	* ssh/seahorse-ssh-commands.vala: Fine tune memory copies 
	of UI data.
	
2008-09-07  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-key.c: Fill in abstract methods properly
	on the SeahorseObject class. Fixes crash. 
	
2008-09-03  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number.

=== seahorse 2.23.91 ===

2008-09-03  Stef Walter  <stef@memberwebs.com>

	* README:
	* NEWS: 
	* pkcs11/Makefile.am: Release version 2.23.91

2008-09-01  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-viewer.c:
    * src/seahorse-viewer.vala:
    * src/vala-build.stamp: Fix some more logic.
    * src/seahorse-viewer.c:
    * src/seahorse-viewer.vala:
    * src/vala-build.stamp: Fix copying keys to clipboard.  Fixes bug #550279
    * src/seahorse.desktop.in.in: Remove encoding line.  Fixes bug #550169
    
2008-08-31  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h: 
	* src/seahorse-key-manager.vala: Fix double free. See bug #547918
	
2008-08-31  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-pgp-key.c: Fix null pointer dereference. See bug #549603
	
2008-08-31  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* pkcs11/gp11.vapi:
	* pkcs11/gp11-hacks.h: (added)
	* pkcs11/seahorse-pkcs11-certificate.vala: Bump vala dependency, and make 
	build work with latest vala again.
	
2008-08-28  Adam Schreiber  <sadam@clemson.edu>

    * ssh/seahorse-ssh-operation.c: Don't round up to the next highest power of 2
    bytes.  Fixes bug #549747.  Happy Birthday to me :)

2008-08-27  Adam Schreiber  <sadam@clemson.edu>
