@@ -1,3 +1,11 @@
+2008-09-08  Stef Walter  <stef@memberwebs.com>
+
+	* libseahorse/libseahorse-c.vapi: Fix ownership problem 
+	with seahorse_multi_operation_take().
+	
+	* src/seahorse-key-manager.vala: Fix dumb 'Couldn't import keys'
+	error message when success. Fixes bug #544059
+	
 2008-09-07  Stef Walter  <stef@memberwebs.com>
 
 	* libseahorse/libseahorse-c.vapi:
